FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20130425:
AUTHOR: bapt@FreeBSD.org

  * USE_CDRTOOLS is no longer recognized
  * USE_FREETYPE is no longer recognized

20130423:
AUTHOR: jgh@FreeBSD.org

  * New USES macro to handle support for gettext dependency:

    USES= gettext:build will add gettext into BUILD_DEPENDS
    USES= gettext:run will add gettext into RUN_DEPENDS
    USES= gettext:lib will add gettext into LIB_DEPENDS

    It deprecates USE_GETTEXT which will be removed as soon as it is not
    used anymore


20130422:
AUTHOR: bdrewery@FreeBSD.org

  * The entry for 20120830 to change CCACHE_DIR was not fully supported
    by all ports. There is now a CCACHE_DIR variable that can be used
    in /etc/make.conf for more complete coverage:

    CCACHE_DIR=/var/cache/ccache

20130422:
AUTHOR: bapt@FreeBSD.org

  * New USES macro to handle support for pkgconf (pkg-config) dependency:

    USES= pkgconfig[:build] will add pkgconf into BUILD_DEPENDS
    USES= pkgconfig:run will add pkgconf into RUN_DEPENDS
    USES= pkgconfig:both will add pkgconf into both RUN and BUILD DEPENDS

    It deprecates USE_PKGCONFIG which will be removed as soon as it is not
    used anymore

20130320:
AUTHOR: jgh@FreeBSD.org

  * New USES macro to handle support for Zenoss ports and Zenpacks:

    USES= zenoss

20130319:
AUTHOR: makc@FreeBSD.org

 * New USES macro should be used instead of deprecated USE_CMAKE and
   CMAKE_OUTSOURCE:

   USES= cmake:outsource
   to perform out-of-source build (equivalent to former pair usage of
   USE_CMAKE/CMAKE_OUTSOURCE)

   USES= cmake
   In-source build (equivalent to plain USE_CMAKE=yes) can be used if
   project doesn't support out-of-source build.


20130319: